[tool.poetry]
name = "fabric-naive"
version = "0.1.0"
description = "naive implement using casadi and pytorch"
authors = ["jeongsukchul <tjrcjf410@snu.ac.kr>"]
license = "non"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
